--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "live-server": "^1.2.1",
     "readline-sync": "^1.4.10"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-cli": "^6.26.0"
+  },
   "scripts": {
     "start": "live-server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "babel src -d app"
   },
   "repository": {
     "type": "git",
