--- a/cvTabet/package.json
+++ b/cvTabet/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.11",
+    "@angular/animations": "^10.1.0",
     "@angular/cdk": "^10.2.0",
     "@angular/common": "~10.0.11",
     "@angular/compiler": "~10.0.11",
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~10.0.11",
     "@angular/platform-browser-dynamic": "~10.0.11",
     "@angular/router": "~10.0.11",
+    "hammerjs": "^2.0.8",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
