--- a/cvTabet/package.json
+++ b/cvTabet/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~10.0.11",
     "@angular/platform-browser-dynamic": "~10.0.11",
     "@angular/router": "~10.0.11",
+    "@material-ui/core": "^4.11.0",
     "bootstrap": "^3.4.1",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.5.5",
