--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,12 @@
                 <artifactId>junit5-api</artifactId>
                 <version>5.0.0-ALPHA</version>
             </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
